--- a/main.css
+++ b/main.css
@@ -1,6 +1,21 @@
-html,body {
-  font: 12px;
+html, body {
+  width:  100%;
   height: 100%;
-  margin:0;
-  padding:0;
+  margin: 0px;
+  overflow: hidden;
+}
+
+.controlContainer{
+	background: rgba(255,255,255,.1);
+	font-family: Helvetica, Arial, sans-serif;
+	font-size: 11px;
+	color:#fff;
+	position: fixed;
+	z-index: 5;
+	top:15px;
+	left: 15px;
+	width:200px;
+	height: 100px;
+	padding: 5px;
+	border-top: 1px solid #ff7700;
 }
